map-filter/fake-data/client-slider
